Fixing data in real time

--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,13 @@
     <base href="/"></base>
     <link rel="stylesheet" type="text/css" href="styles/maptime.css" />
     <link rel="stylesheet" type="text/css" href="styles/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="scripts/leaflet-old/leaflet.css">
+    <link rel="stylesheet" type="text/css" href="scripts/leaflet-beta/leaflet.css">
   </head>
   <body>
     <div id="map"></div>
+    <input id="zoomLevel" type="text"></input>
     <script type="text/javascript" src="scripts/jquery/jquery.js"></script>
-    <script type="text/javascript" src="scripts/leaflet-old/leaflet.js"></script>
+    <script type="text/javascript" src="scripts/leaflet-beta/leaflet.js"></script>
     <script type="text/javascript" src="scripts/maptime.js"></script>
   </body>
 </html>
